--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       /*描画領域の取得*/
       var target = document.getElementById('target');
       var map;
-      var nagoya = {lat: 35.1706431, lon: 136.8816945};
+      var nagoya = {lat: 35.1706431, ln: 136.8816945};
 
       map = new google.maps.Map(target, {
         center: nagoya,
